# rust-setuptools-ex

./: .gitignore  README.md  rust-fmt.sh
extensions/: Cargo.toml
extensions/src/: lib.rs
test/: main.py
